# bigdata-dashboard-private-credit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  server.py
.github/workflows/: pages.yml
config/: entities.py  paths.py  topics.py
docs/: README.md  private_credit_business_process.md
src/: app_logging.py  reporter.py  scorer.py  search.py  utils.py
tests/: test_scorer_audit_alignment.py
